# hash-it

./: .gitignore  AUTHORS  INSTALL  README.md  com.github.libredeb.hashit.yml  io.github.libredeb.hashit.yml  meson.build  post_install.py
.github/workflows/: main.yml
data/: com.github.libredeb.hashit.1  com.github.libredeb.hashit.appdata.xml.in  com.github.libredeb.hashit.desktop.in  com.github.libredeb.hashit.gresource.xml  gtk-widgets.css  hashit.desktop  io.github.libredeb.hashit.1  io.github.libredeb.hashit.appdata.xml.in  io.github.libredeb.hashit.desktop.in  io.github.libredeb.hashit.gresource.xml
data/schemas/: org.hashit.gschema.xml
po/: POTFILES  com.github.libredeb.hashit.pot  es.po  io.github.libredeb.hashit.pot
src/: Application.vala  Constants.vala  Main.vala  Settings.vala
src/Backend/: Checksum.vala  ResultState.vala
src/Widgets/: AboutDialog.vala  FileDialog.vala  HeaderBar.vala  InputView.vala  Selection.vala
